# hot-news-script

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
news_crawl/crawler/: crawler.py  crawler_manager.py
news_crawl/model/: article.py
news_crawl/spider/: spider.py
news_crawl/utils/: constant.py
output/: tuoitre_10_20241223_20241230.txt  tuoitre_10_20241230_20241231.txt  vnexpress_10_20241223_20241230.txt  vnexpress_10_20241229_20241230.txt  vnexpress_10_20241230_20241231.txt
src/: logger.py
src/crawler/: base.py  crawler.py  crawler_manager.py
src/model/: article.py
src/spider/: spider.py
src/utils/: constant.py
