[tool.poetry]
name = "hot-news-script"
version = "0.1.0"
description = ""
authors = ["quanhn <quanhuynh1310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
bs4 = "^0.0.2"
scrapy = "^2.12.0"
black = "^24.10.0"
ruff = "^0.8.4"
python-json-logger = "^3.2.1"
pytz = "^2024.2"
scrapy-fake-useragent = "^1.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
